// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider overview 1 snapshot 1`] = `
<DocumentFragment>
  <input
    class="css-mo64tj"
    type="range"
    value="36"
  />
</DocumentFragment>
`;

exports[`Slider overview 2 snapshot 1`] = `
<DocumentFragment>
  <input
    class="css-mo64tj"
    type="range"
    value="32"
  />
</DocumentFragment>
`;

exports[`Slider overview 3 snapshot 1`] = `
<DocumentFragment>
  <input
    class="css-mo64tj"
    type="range"
    value="19"
  />
</DocumentFragment>
`;

exports[`Slider overview 4 snapshot 1`] = `
<DocumentFragment>
  <input
    class="css-mo64tj"
    type="range"
    value="32"
  />
</DocumentFragment>
`;

exports[`Slider overview 5 snapshot 1`] = `
<DocumentFragment>
  <input
    class="css-mo64tj"
    type="range"
    value="37"
  />
</DocumentFragment>
`;
